--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "decimal.js": "^10.4.3",
+    "exceljs": "^4.3.0",
     "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.4.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
