--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "tmp": "^0.2.1",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
@@ -53,6 +54,7 @@
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
+    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
