--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.362.0",
+    "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
@@ -40,12 +41,14 @@
     "decimal.js": "^10.4.3",
     "exceljs": "^4.3.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "papaparse": "^5.4.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "tmp": "^0.2.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "web-push": "^3.6.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -56,6 +59,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.1",
     "@types/node": "18.16.12",
+    "@types/nodemailer": "^6.4.9",
     "@types/supertest": "^2.0.11",
     "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
